[tool.poetry]
name = "pylox"
version = "0.1.0"
description = "Lox programming language, built with Python."
authors = ["Chris Lawlor"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"
Jinja2 = "^3.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"

[tool.poetry.scripts]
lox = "pylox.cli:main"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
